<resources>
    <string name="app_name">Faircorp</string>
    <string name="app_logo_description">Faircorp logo</string>

    <string name="act_window_name">Window name</string>
    <string name="act_window_room">Room</string>
    <string name="act_window_floor">Floor</string>
    <string name="act_window_building">Building</string>
    <string name="act_window_target_temp">Target room temperature</string>
    <string name="act_window_current_temp">Current room temperature</string>
    <string name="act_window_status">Status</string>
    <string name="act_window_btn_delete">DELETE THE WINDOW</string>
    <string name="act_window_switch_delete">Enable the delete</string>

    <string name="act_heater_name">Heater name</string>
    <string name="act_heater_room">Room</string>
    <string name="act_heater_floor">Floor</string>
    <string name="act_heater_building">Building</string>
    <string name="act_heater_target_temp">Target room temperature</string>
    <string name="act_heater_current_temp">Current room temperature</string>
    <string name="act_heater_status">Status</string>
    <string name="act_heater_btn_delete">DELETE THE HEATER</string>
    <string name="act_heater_switch_delete">Enable the delete</string>

    <string name="act_room_name">Room name</string>
    <string name="act_room_floor">Floor</string>
    <string name="act_room_building">Building</string>
    <string name="act_room_target_temp">Target room temperature</string>
    <string name="act_room_current_temp">Current room temperature</string>
    <string name="act_room_btn_delete">DELETE THE ROOM</string>
    <string name="act_room_switch_delete">Enable the delete</string>
    <string name="act_room_btn_open_windows">Open all</string>
    <string name="act_room_btn_close_windows">Close all</string>
    <string name="act_room_btn_windows">Manage the room\'s windows</string>
    <string name="act_room_btn_on_heaters">On all</string>
    <string name="act_room_btn_off_heaters">Off all</string>
    <string name="act_room_btn_heaters">Manage the room\'s heaters</string>
    <string name="act_room_txt_window_manage">Windows</string>
    <string name="act_room_txt_heater_manage">Heaters</string>

    <string name="act_main_welcome">Welcome on faircorp,\nthe app to manage buildings</string>
    <string name="act_main_manage_windows">Manage windows</string>
    <string name="act_main_manage_heaters">Manage heaters</string>
    <string name="act_main_manage_rooms">Manage rooms</string>

    <string name="menu_website">Our website</string>
    <string name="menu_email">Send us an email</string>
</resources>